examples/test/testpolicy7450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7450
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key42: value21
      key13: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value48
          key22: value20
      podSelector:
        matchLabels:
          key14: value48
          key26: value27
          key37: value19
